<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/title_paired_devices"
        android:textColor="#fff"
        android:visibility="gone"
        />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_new_devices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#666"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/title_other_devices"
            android:textColor="#fff"
            android:visibility="gone"
            android:layout_weight="1"
            />

        <ProgressBar
            android:id="@+id/scan_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#666"/>

    </LinearLayout>

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true"
        />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        />
</LinearLayout>
